# jupyter-notebooks

./: .gitignore  README.md  pyproject.toml
data/: eurpln_2001-2025.csv
notebooks/: 01_eurpln_overview.ipynb  02_stationarity_testing_using_arch.ipynb  03_ARMA_models_lags_selection.ipynb  04_fractional_differencing_with_ts_fracdiff.ipynb  05_good-looking_stock_price_chart.ipynb  09_gold_price_1960-1971.ipynb
src/: 03_ARMA_models_lags_selection.py  temp.py
