[project]
name = "jupyter-notebooks"
version = "0.1.0"
description = "Vault for storing various jupyter notebooks"
requires-python = ">=3.14"
dependencies = [
    "arch>=8.0.0",
    "fastparquet>=2025.12.0",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
